# bricks

./: .gitignore  CMakeLists.txt  README.md
Bricks/: Application.cpp  Application.h  CMakeLists.txt  ball.c  ball.h  brick.c  brick.h  event.c  event.h  level.c  level.h  main.c  main.cpp  paddle.c  paddle.h  renderer.c  renderer.h  types.h
Libraries/: CMakeLists.txt
Libraries/LibCommon/: Types.h
Libraries/LibGraphics/: CMakeLists.txt  Common.h  Texture.cpp  Texture.h  Window.cpp
Libraries/LibGraphics/Entity/: Entity.cpp  Entity.h  TexturedEntity.cpp  TexturedEntity.h
Resources/: 01_level.csv
